[package]
name = "hello-world-plugin"
version = "1.0.0"
edition = "2021"
description = "A simple example plugin for RustPress"
authors = ["RustPress Team"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustpress-core = { path = "../../crates/rustpress-core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
